...
    RESEARCH_KEYBOARD_SELECT,
}

enum class AccessUnavailableReason {
    HARDWARE_ABSENT,
    LOCATION_SETTINGS_CHANGE_UNAVAILABLE,
    LOCATION_SETTINGS_CHECK_FAILED,
    SYSTEM_HANDLER_MISSING,
}

sealed interface AccessResolution {
    data object Satisfied : AccessResolution

...
